--- a/configs/biomassters.yaml
+++ b/configs/biomassters.yaml
@@ -9,7 +9,7 @@ trainer:
     class_path: TensorBoardLogger
     init_args:
       save_dir: <your_dir>
-      name: vitB_adamw.lr1.0e-5_wd02_steplr.3.9_earlystop10
+      name: trainer_name
   callbacks:
     - class_path: RichProgressBar
     - class_path: LearningRateMonitor
@@ -17,30 +17,29 @@ trainer:
         logging_interval: epoch
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
-        patience: 10
+        patience: 20
         monitor: val/loss
-  max_epochs: 50
-  check_val_every_n_epoch: 2
-  log_every_n_steps: 2
-  enable_checkpointing: true
+  max_epochs: 125
+  check_val_every_n_epoch: 10
+  log_every_n_steps: 50
+  enable_checkpointing: True
   default_root_dir: <your_dir>
 
 data:
-  class_path: ForestNetNonGeoDataModule
+  class_path: BioMasstersNonGeoDataModule
   init_args:
-    use_metadata: True
     batch_size: 8
     num_workers: 12
     bands:
       - BLUE
       - GREEN
       - RED
-      - NIR
+      - NIR_NARROW
       - SWIR_1
       - SWIR_2
     train_transform:
       - class_path: FlattenTemporalIntoChannels
-      - class_path: albumentations.Resize
+      - class_path: albumentations.RandomCrop
         init_args:
           height: 224
           width: 224
@@ -48,53 +47,63 @@ data:
       - class_path: ToTensorV2
       - class_path: UnflattenTemporalFromChannels
         init_args:
-          n_timesteps: 3
+          n_timesteps: 4
     val_transform:
       - class_path: FlattenTemporalIntoChannels
-      - class_path: albumentations.Resize
+      - class_path: albumentations.RandomCrop
         init_args:
           height: 224
           width: 224
+      - class_path: albumentations.Flip
       - class_path: ToTensorV2
       - class_path: UnflattenTemporalFromChannels
         init_args:
-          n_timesteps: 3
-    test_transform:
-      - class_path: FlattenTemporalIntoChannels
-      - class_path: albumentations.Resize
-        init_args:
-          height: 224
-          width: 224
-      - class_path: ToTensorV2
-      - class_path: UnflattenTemporalFromChannels
-        init_args:
-          n_timesteps: 3
-    data_root: "/dccstor/geofm-finetuning/datasets/ForestNet"
+          n_timesteps: 4
+    data_root: <dataset_dir>
+    sensors:
+      - "S2"
+    as_time_series: True
+    use_four_frames: True
 
 model:
-  class_path: terratorch.tasks.ClassificationTask
+  class_path: terratorch.tasks.PixelwiseRegressionTask
   init_args:
     model_args:
       backbone_pretrained: True
-      backbone: prithvi_vit_100 # can be vit_100, vit_300 or vit_600
-      decoder: IdentityDecoder
-      num_classes: 4
-      backbone_num_frames: 3
+      backbone: <prithvi_model> #  choose your prithvi model
+      decoder: UperNetDecoder
+      backbone_pretrained: True
+      rescale: True
       backbone_bands:
         - BLUE
         - GREEN
         - RED
-        - NIR
+        - NIR_NARROW
         - SWIR_1
         - SWIR_2
       head_dropout: 0.1
-    loss: ce
-    class_weights:
-      - 0.46
-      - 0.10
-      - 0.11
-      - 0.32
-    ignore_index: -1
+      decoder_channels: 512
+      backbone_num_frames: 4
+      necks:
+        - name: SelectIndices
+          indices:
+            # indices for vit_100
+            - 2
+            - 5
+            - 8
+            - 11
+            # indices for vit_300
+            # - 5
+            # - 11
+            # - 17
+            # - 23
+            # indices for vit_600
+            # - 7
+            # - 15
+            # - 23
+            # - 31
+        - name: ReshapeTokensToImage
+          effective_time_dim: 4
     freeze_backbone: false
     freeze_decoder: false
     model_factory: EncoderDecoderFactory
@@ -102,11 +111,11 @@ model:
 optimizer:
   class_path: torch.optim.AdamW
   init_args:
-    lr: 1.0e-5
-    weight_decay: 0.2
+    lr: 0.0001
+    weight_decay: 0.05
 
 lr_scheduler:
   class_path: StepLR
   init_args:
-    step_size: 3
+    step_size: 10
     gamma: 0.9
