--- a/configs/firescars.yaml
+++ b/configs/firescars.yaml
@@ -9,7 +9,7 @@ trainer:
     class_path: TensorBoardLogger
     init_args:
       save_dir: <your_dir>
-      name: ViTh_norededge_adamw.lr1.0e-5_wd01_Cosine_decoder1024_T+L
+      name: trainer_name
   callbacks:
     - class_path: RichProgressBar
     - class_path: LearningRateMonitor
@@ -17,7 +17,7 @@ trainer:
         logging_interval: epoch
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
-        patience: 10
+        patience: 20
         monitor: val/loss
   max_epochs: 50
   check_val_every_n_epoch: 2
@@ -26,89 +26,83 @@ trainer:
   default_root_dir: <your_dir>
 
 data:
-  class_path: Landslide4SenseNonGeoDataModule
+  class_path: terratorch.datamodules.FireScarsNonGeoDataModule
   init_args:
-    batch_size: 8
-    num_workers: 12
-    bands:
-      - BLUE
-      - GREEN
-      - RED
-      # - RED_EDGE_1
-      # - RED_EDGE_2
-      # - RED_EDGE_3
-      - NIR_BROAD
-      - SWIR_1
-      - SWIR_2
-      - SLOPE
-      - DEM
+    data_root: <dataset_path>
+    batch_size: 16
+    num_workers: 8
+    no_data_replace: 0
+    no_label_replace: -1
+    use_metadata: False
     train_transform:
-      - class_path: albumentations.Flip
-      - class_path: albumentations.RandomResizedCrop
+      - class_path: albumentations.Resize
+        init_args:
+          height: 448
+          width: 448
+      - class_path: albumentations.RandomCrop
         init_args:
           height: 224
           width: 224
+      - class_path: albumentations.HorizontalFlip
+        init_args:
+          p: 0.5
+      - class_path: albumentations.VerticalFlip
+        init_args:
+          p: 0.5
       - class_path: ToTensorV2
     val_transform:
-      - class_path: albumentations.RandomResizedCrop
+      - class_path: albumentations.Resize
         init_args:
-          height: 224
-          width: 224
+          height: 448
+          width: 448
       - class_path: ToTensorV2
     test_transform:
-      - class_path: albumentations.RandomResizedCrop
+      - class_path: albumentations.Resize
         init_args:
-          height: 224
-          width: 224
+          height: 448
+          width: 448
       - class_path: ToTensorV2
-    data_root: "/dccstor/geofm-finetuning/datasets/Landslide4sense"
-
+        
 model:
   class_path: terratorch.tasks.SemanticSegmentationTask
   init_args:
     model_args:
       backbone_pretrained: True
-      backbone: prithvi_vit_600 # can be vit_100, vit_300 or vit_600
+      backbone: <prithvi_model> #  choose your prithvi model
       decoder: UperNetDecoder
+      decoder_channels: 256
+      decoder_scale_modules: true
       num_classes: 2
       rescale: True
       backbone_bands:
         - BLUE
         - GREEN
         - RED
-        # - RED_EDGE_1
-        # - RED_EDGE_2
-        # - RED_EDGE_3
         - NIR_BROAD
         - SWIR_1
         - SWIR_2
-        - SLOPE
-        - DEM
       head_dropout: 0.1
-      decoder_channels: 1024
-      head_channel_list:
-        - 128
-        - 64
       necks:
         - name: SelectIndices
           indices:
             # indices for vit_100
-            # - 2
-            # - 5
-            # - 8
-            # - 11
+            - 2
+            - 5
+            - 8
+            - 11
             # indices for vit_300
             # - 5
             # - 11
             # - 17
             # - 23
             # indices for vit_600
-            - 7
-            - 15
-            - 23
-            - 31
+            # - 7
+            # - 15
+            # - 23
+            # - 31
         - name: ReshapeTokensToImage
-    loss: focal
+    loss: ce
+    ignore_index: -1
     freeze_backbone: false
     freeze_decoder: false
     model_factory: EncoderDecoderFactory
@@ -116,8 +110,8 @@ model:
 optimizer:
   class_path: torch.optim.AdamW
   init_args:
-    lr: 1.0e-5
-    weight_decay: 0.1
+    lr: 5.0e-5
+    weight_decay: 0.05
 
 lr_scheduler:
   class_path: CosineAnnealingLR
