--- a/configs/sen1floods11.yaml
+++ b/configs/sen1floods11.yaml
@@ -5,22 +5,36 @@ trainer:
   devices: auto
   num_nodes: 1
   precision: 16-mixed
+  logger:
+    class_path: TensorBoardLogger
+    init_args:
+      save_dir: <your_dir>
+      name: trainer_name
   callbacks:
     - class_path: RichProgressBar
     - class_path: LearningRateMonitor
       init_args:
         logging_interval: epoch
-  max_epochs: 125
-  check_val_every_n_epoch: 10
-  log_every_n_steps: 50
+    - class_path: lightning.pytorch.callbacks.EarlyStopping
+      init_args:
+        patience: 20
+        monitor: val/loss
+  max_epochs: 50
+  check_val_every_n_epoch: 2
+  log_every_n_steps: 10
   enable_checkpointing: True
-  default_root_dir: /dccstor/geofm-finetuning/pedrohc/biomassters
+  default_root_dir: <your_dir>
 
 data:
-  class_path: BioMasstersNonGeoDataModule
+  class_path: terratorch.datamodules.Sen1Floods11NonGeoDataModule
   init_args:
-    batch_size: 8
-    num_workers: 12
+    data_root: <dataset_dir>
+    batch_size: 16
+    num_workers: 8
+    constant_scale: 0.0001
+    no_data_replace: 0
+    no_label_replace: -1
+    use_metadata: False
     bands:
       - BLUE
       - GREEN
@@ -29,41 +43,44 @@ data:
       - SWIR_1
       - SWIR_2
     train_transform:
-      - class_path: FlattenTemporalIntoChannels
+      - class_path: albumentations.Resize
+        init_args:
+          height: 448
+          width: 448
       - class_path: albumentations.RandomCrop
         init_args:
           height: 224
           width: 224
-      - class_path: albumentations.Flip
-      - class_path: ToTensorV2
-      - class_path: UnflattenTemporalFromChannels
+      - class_path: albumentations.HorizontalFlip
         init_args:
-          n_timesteps: 4
+          p: 0.5
+      - class_path: albumentations.VerticalFlip
+        init_args:
+          p: 0.5
+      - class_path: ToTensorV2
     val_transform:
-      - class_path: FlattenTemporalIntoChannels
-      - class_path: albumentations.RandomCrop
+      - class_path: albumentations.Resize
         init_args:
-          height: 224
-          width: 224
-      - class_path: albumentations.Flip
+          height: 448
+          width: 448
       - class_path: ToTensorV2
-      - class_path: UnflattenTemporalFromChannels
+    test_transform:
+      - class_path: albumentations.Resize
         init_args:
-          n_timesteps: 4
-    data_root: "/dccstor/geofm-finetuning/datasets/BioMassters/BioMassters"
-    sensors:
-      - "S2"
-    as_time_series: True
-    use_four_frames: True
-
+          height: 448
+          width: 448
+      - class_path: ToTensorV2
+        
 model:
-  class_path: terratorch.tasks.PixelwiseRegressionTask
+  class_path: terratorch.tasks.SemanticSegmentationTask
   init_args:
     model_args:
-      backbone_pretrained: True
-      backbone: prithvi_vit_100
+      backbone_pretrained: false
+      backbone: <prithvi_model> #  choose your prithvi model
       decoder: UperNetDecoder
-      backbone_pretrained: True
+      decoder_channels: 256
+      decoder_scale_modules: true
+      num_classes: 2
       rescale: True
       backbone_bands:
         - BLUE
@@ -73,8 +90,6 @@ model:
         - SWIR_1
         - SWIR_2
       head_dropout: 0.1
-      decoder_channels: 512
-      backbone_num_frames: 4
       necks:
         - name: SelectIndices
           indices:
@@ -88,13 +103,14 @@ model:
             # - 11
             # - 17
             # - 23
-            # indices for vit_6
+            # indices for vit_600
             # - 7
             # - 15
             # - 23
             # - 31
         - name: ReshapeTokensToImage
-          effective_time_dim: 4
+    loss: ce
+    ignore_index: -1
     freeze_backbone: false
     freeze_decoder: false
     model_factory: EncoderDecoderFactory
@@ -102,11 +118,10 @@ model:
 optimizer:
   class_path: torch.optim.AdamW
   init_args:
-    lr: 0.0001
+    lr: 5.0e-5
     weight_decay: 0.05
 
 lr_scheduler:
-  class_path: StepLR
+  class_path: CosineAnnealingLR
   init_args:
-    step_size: 10
-    gamma: 0.9
+    T_max: 50
