--- a/configs/biomassters.yaml
+++ b/configs/biomassters.yaml
@@ -23,7 +23,7 @@ trainer:
   check_val_every_n_epoch: 10
   log_every_n_steps: 50
   enable_checkpointing: True
-  default_root_dir: <your_dir>
+  default_root_dir: <your_dir> # https://huggingface.co/datasets/ibm-nasa-geospatial/BioMassters
 
 data:
   class_path: BioMasstersNonGeoDataModule
@@ -70,7 +70,7 @@ model:
   init_args:
     model_args:
       backbone_pretrained: True
-      backbone: <prithvi_model> #  choose your prithvi model
+      backbone: <prithvi_model> # prithvi_vit_100, prithvi_eo_v2_300, prithvi_eo_v2_300_tl, prithvi_eo_v2_600, prithvi_eo_v2_600_tl
       decoder: UperNetDecoder
       backbone_pretrained: True
       rescale: True
@@ -87,21 +87,21 @@ model:
       necks:
         - name: SelectIndices
           indices:
-            # indices for vit_100
-            - 2
-            - 5
-            - 8
-            - 11
-            # indices for vit_300
+            # indices for prithvi_vit_100
+            # - 2
+            # - 5
+            # - 8
+            # - 11
+            # indices for prithvi_eo_v2_300
             # - 5
             # - 11
             # - 17
             # - 23
-            # indices for vit_600
-            # - 7
-            # - 15
-            # - 23
-            # - 31
+            # indices for prithvi_eo_v2_600
+            - 7
+            - 15
+            - 23
+            - 31
         - name: ReshapeTokensToImage
           effective_time_dim: 4
     freeze_backbone: false
