--- a/configs/landslide.yaml
+++ b/configs/landslide.yaml
@@ -59,14 +59,14 @@ data:
           height: 224
           width: 224
       - class_path: ToTensorV2
-    data_root: <dataset_dir>
+    data_root: <dataset_dir> # https://huggingface.co/datasets/ibm-nasa-geospatial/Landslide4sense
 
 model:
   class_path: terratorch.tasks.SemanticSegmentationTask
   init_args:
     model_args:
       backbone_pretrained: True
-      backbone: <prithvi_model> #  choose your prithvi model
+      backbone: <prithvi_model> # prithvi_vit_100, prithvi_eo_v2_300, prithvi_eo_v2_300_tl, prithvi_eo_v2_600, prithvi_eo_v2_600_tl
       decoder: UperNetDecoder
       num_classes: 2
       rescale: True
@@ -88,17 +88,17 @@ model:
       necks:
         - name: SelectIndices
           indices:
-            # indices for vit_100
+            # indices for prithvi_vit_100
             # - 2
             # - 5
             # - 8
             # - 11
-            # indices for vit_300
+            # indices for prithvi_eo_v2_300
             # - 5
             # - 11
             # - 17
             # - 23
-            # indices for vit_600
+            # indices for prithvi_eo_v2_600
             - 7
             - 15
             - 23
