--- a/configs/sen1floods11.yaml
+++ b/configs/sen1floods11.yaml
@@ -76,7 +76,7 @@ model:
   init_args:
     model_args:
       backbone_pretrained: false
-      backbone: <prithvi_model> #  choose your prithvi model
+      backbone: <prithvi_model> # prithvi_vit_100, prithvi_eo_v2_300, prithvi_eo_v2_300_tl, prithvi_eo_v2_600, prithvi_eo_v2_600_tl
       decoder: UperNetDecoder
       decoder_channels: 256
       decoder_scale_modules: true
@@ -93,17 +93,17 @@ model:
       necks:
         - name: SelectIndices
           indices:
-            # indices for vit_100
+            # indices for prithvi_vit_100
             - 2
             - 5
             - 8
             - 11
-            # indices for vit_300
+            # indices for prithvi_eo_v2_300
             # - 5
             # - 11
             # - 17
             # - 23
-            # indices for vit_600
+            # indices for prithvi_eo_v2_600
             # - 7
             # - 15
             # - 23
